# project-chimera-v1.1

./: .dockerignore  .env  .env.example  README.md  dashboard.py  debug_mission.py  deploy.sh  docker-compose.prod.yml  install_enterprise_deps.py  main.py  requirements.txt  setup_admin.py  test_mission.json  vision.md
agents/: creator.py  guardian.py  orchestrator.py  prospector.py  strategist.py  technician.py
auth/: __init__.py  dependencies.py  routes.py  security.py
backend/: .env  .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_postgresql.py  test_browser_automation.py  test_database.py  test_job_queue.py  test_vector_db.py  verify_architecture.py
backend/agents/: __init__.py  bard.py  base_agent.py  closer.py  communicator.py  dispatcher.py  guardian.py  orchestrator.py  strategist.py
backend/auth/: dependencies.py  models.py  routes.py
backend/config/: settings.py
backend/data/chromadb/: chroma.sqlite3
backend/data/diagnostic_reports/: 2f12b2f1-24e7-423f-9abc-6ef34792252f.json  ac8708f1-dceb-439c-9982-2ca5cfb64242.json  cd4ee802-5b48-45cc-81d4-5ea9006b63d4.json
backend/data/lancedb/content.lance/_transactions/: 0-b41c1b6f-9c59-470b-a1b6-ebe1eed7b48e.txn  1-459da2ad-387a-4367-9b2c-9073bd1f628a.txn
backend/data/lancedb/content.lance/_versions/: 1.manifest  2.manifest
backend/data/lancedb/conversations.lance/_transactions/: 0-b6386f42-c567-4e21-b180-e18044b57d7e.txn  1-8d3f9005-a1b1-40b4-9f6f-d66d7f194147.txn
backend/data/lancedb/conversations.lance/_versions/: 1.manifest  2.manifest
backend/data/lancedb/leads.lance/_transactions/: 0-db7899d2-1b9c-4e2a-8c9b-0d2c7912ad6e.txn  1-776972b6-f040-4883-8a88-1d2361194aa6.txn
backend/data/lancedb/leads.lance/_versions/: 1.manifest  2.manifest
backend/data/lancedb/leads.lance/data/: d3f293ed-0b35-4496-b50d-84e7b3084096.lance
backend/database/: __init__.py  db_manager.py
backend/docker/sandbox/: docker-compose.yml
backend/infrastructure/: __init__.py  browser_automation.py  database.py  job_queue.py  vector_db.py
backend/monitoring/: metrics.py
backend/tenants/: __init__.py  models.py
backend/tools/: email_service.py
backend/utils/: __init__.py
backend/workers/: __init__.py  agent_tasks.py  celery_app.py  system_tasks.py
config/: __init__.py  settings.py
data/: agent_final_test.db  chimera_enterprise.db  chimera_local.db  final_test.db  health_check.db  test_chimera.db  test_phase5.db
data/diagnostic_reports/: 082c5ac7-13c9-42d8-aedb-edbdf7f1cc76.json  8f5b3fa4-aff8-4a0b-a43d-a6a6cc37bbca.json
data/final_test_memory/: chroma.sqlite3
data/test_memory_bank/: chroma.sqlite3
data/test_memory_health/: chroma.sqlite3
database/: db_manager.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docker/sandbox/: Dockerfile
frontend-client/: package-lock.json  package.json
frontend-client/src/app/: globals.css  layout.tsx  page.tsx
frontend-client/src/app/auth/signin/: page.tsx
frontend-client/src/app/dashboard/: page.tsx
frontend-client/src/components/dashboard/: create-mission-dialog.tsx  header.tsx  leads-tab.tsx  missions-tab.tsx  system-overview.tsx
frontend-client/src/lib/: api.ts  auth.ts
frontend-client/src/types/: next-auth.d.ts
monitoring/: __init__.py  health.py
tenants/: manager.py  middleware.py  models.py
tools/: __init__.py  memory_bank.py
utils/: error_handler.py  error_router.py  llm_service.py  logger.py  sandbox_manager.py
workers/: __init__.py  celery_app.py
